[package]
name = "kvs"
version = "0.1.0"
authors = ["Yuhang Teng <soothteng@outlook.com>"]
description = "kv store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["cargo"] }
structopt = "0.3.26"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
